2009-10-24  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* parse_aprs.c, interface.c, aprx.h:
	    Depending upon usage, either do not look inside 3rd-party
	    frame, or do look inside.   For Tx-iGate call paths we need
	    the analysis!

	* parse_aprs.c, interface.c, historydb.c, digipeater.c,
	  rfbeacon.c, dupecheck.c, igate.c:
	    Removed codes ignoring "trailing CRLF in APRS frame tail".
	    They kept causing more trouble than good.  The parse_aprs.c
	    is anyway diverged from its origins a bit more than I would
	    like, so no need to maintain mess related on its original
	    environment.

	* dupecheck.c, aprx.h:
	    Adjust dupecheck hash bucket size - 16 is quite sufficient
	    enough even for a very busy igate/digi!

	* igate.c, aprx.h, ax25.c, ttyreader.c
	    Restructured 3rd-party frame rx-igate processing so that it
	    does not need to alter TNC2 format buffer in any way.
	    This caused some weird things to happen in digipeater on cases
	    of 3rd-party frames.
	    Also modified ax25-to-tnc2 UI-formatter so that there will
	    always be zero termination of output text string.

	* interface.c, digipeater.c:
	    Small restructuring while debugging other things.

	* parse_aprs.c:
	    Parse APRS 3rd-party frame content, and recognize real
	    3rd-party frame for sure.

2009-10-24  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* VERSION: 1.93

	* ttyreader.c, erlang.c:
	    Feeding in generated random noise did raise a few errors
	    in KISS frame processing, and erlang accounting.
	    KISS tncid:s sometimes did not have a callsign associated
	    with them, and then erlang accounting blew up...

	* interface.c, rfbeacon.c, ax25.c, aprx.h:
	    Beacons to radio interfaces, KISS works best, NET-AX.25 less
	    well -- transmits OK UI frames, transmit of arbitrary other
	    types of frames is necessary for generic digipeating.

	* digipeater.c:
	    Add alias to config parameter 'transmit' -> 'transmitter'.
