@@ -503,4 +503,4 @@ extern struct pbuf_t *pbuf_new(const int is_aprs, const int digi_like_aprs, cons
 
 
 /* parse_aprs.c */
-extern int parse_aprs(struct pbuf_t *pb, const int look_into_3rd_party );
+extern int parse_aprs(struct pbuf_t *pb, int look_into_3rd_party );
